--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -15,84 +15,290 @@
     --box-shadow: 2px 0px 9px 0px #00000083;
 }
 
+
 h1 {
     font-family: var(--font-uppercase);
-    font-size: 2em;
+    font-size: 2rem;
 }
 
 h2 {
+    font-family: var(--font-uppercase);
+    font-size: 1.5rem;
+}
+
+h3 {
     font-family: var(--font-principal);
-    font-size: 1.5em;
+    font-size: 1rem;
 }
 
-h3,
-h4 {
+h4,
+a {
     font-family: var(--font-secundario);
-    font-size: 1.2em;
+    font-size: 1.2rem;
 }
-
 
 p {
     font-family: var(--font-secundario);
 }
 
-.btn {
-    font: 100 var();
+header {
+    height: 10rem;
+    width: auto;
+    max-width: 80rem;
+    margin-inline: auto;
+    z-index: 0;
 }
 
-/* header */
-
-.contenedor__header {
-    height: 3.5em;
-    background-color: var(--color-primario-verde);
+/* ENCABEZADDO Y LOGOS */
+.header__contenedor {
+    display: grid;
+    grid-template-columns: 1fr 2fr 1fr;
+    gap: 5rem;
+    width: 100%;
+    height: 8rem;
 }
 
-.header__logos {
-    overflow: hidden;
+.contenedor__llamanos a {
+    margin: 0.7rem 1rem;
 }
 
-.contenedor__menu {
-    height: 3.5em;
+.contenedor__llamanos img,
+.contenedor__llamanos p {
+    display: inline;
+}
+
+.contenedor__llamanos img {
+    width: 1rem;
+}
+
+.contenedor__logos {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.logos {
+    border: solid 4px red;
+    width: 80%;
+    max-height: 4rem;
+    height: auto;
+    margin: 1rem auto;
+}
+
+.rrss {
+    width: 7rem;
+    margin: 0.7rem 1rem;
+    text-align: end;
+    transition: all 3ms ease;
+}
+
+.rrss img, 
+.rrss a {
+    display: inline;
+}
+
+/* MENU */
+.menu {
+    width: auto;
+    height: 2.1rem;
+    padding-inline: 10rem;
+    background-color: var(--color-verde-alternativo);
+    margin-inline: auto;
     box-shadow: var(--box-shadow);
-    background-color: var(--color-primario-blanco);
+}
+
+.menu__list {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    gap: 1rem;
 }
 
 .menu__btn {
-    transition: all 0.3ms ease;
-}
-
-.menu__btn p {
-    padding-top: 1em;
+    border-bottom: 4px solid var(--color-celeste);
+    color: var(--color-primario-blanco);
     text-align: center;
+    font-weight: 700;
+    font-size: 1.2rem;
+    padding-top: 0.3rem;
+    padding-bottom: 0.1rem;
+    transition: all 3ms ease;
 }
 
-.btn--barra {
-    margin: auto;
-    background-color: var(--color-verde-alternativo);
-    height: 0.4em;
-    width: 10em;
-}
+/* BANNER */
 
-.menu__btn:hover .btn--barra {
-    transform: scale(1.2);
-}
-
-.header__rrss {
-    
-}
-
-.header__rrss a {
-    text-align: center;
+#banner {
+    border: 4px solid green;
+    height: 70vh;
+    width: 100%;
     overflow: hidden;
-    height: 3.5em;
-    transition: all 0.3ms ease;
 }
 
-.header__rrss a:hover {
-    transform: scale(1.2);
+.contenedor__banner {
+    border: 4px solid red;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    width: 400%;
+    height: 100%;
+    transition: all;
+    transform: translate(2);
 }
 
+.banner__img {
+    border: 5px solid blueviolet;
+    width: 100%;
+    height: 100%;
+}
 
+#banner h1 {
+    margin: -15rem 10rem 3rem 10rem;
+}
 
+/* Transiciones */
 
+@-webkit-keyframes fadeInDown {
+    from {
+        opacity: 0;
+        -webkit-transform: translate3d(0, -100%, 0);
+        transform: translate3d(0, -100%, 0);
+    }
+
+    to {
+        opacity: 1;
+        -webkit-transform: translate3d(0, 0, 0);
+        transform: translate3d(0, 0, 0);
+    }
+}
+
+@keyframes fadeInDown {
+    from {
+        opacity: 0;
+        -webkit-transform: translate3d(0, -100%, 0);
+        transform: translate3d(0, -100%, 0);
+    }
+
+    to {
+        opacity: 1;
+        -webkit-transform: translate3d(0, 0, 0);
+        transform: translate3d(0, 0, 0);
+    }
+}
+
+.fadeInDown {
+-webkit-animation-name: fadeInDown;
+animation-name: fadeInDown;
+}
+
+.animated {
+-webkit-animation-duration: 1s;
+animation-duration: 1s;
+-webkit-animation-fill-mode: both;
+animation-fill-mode: both;
+}
+
+/* backgrounds */
+.bg-pan-left {
+    -webkit-animation:bg-pan-left 8s both;
+    animation:bg-pan-left 8s both;
+}
+
+@-webkit-keyframes bg-pan-left {
+    0%{background-position:100% 50%}
+    100%{background-position:0 50%}
+}
+@keyframes bg-pan-left {
+    0%{background-position:100% 50%}
+    100%{background-position:0 50%}
+}
+
+/* btn transiciones */
+
+/* Sweep To Top */
+.hvr-sweep-to-top {
+    display: inline-block;
+    vertical-align: middle;
+    -webkit-transform: perspective(1px) translateZ(0);
+    transform: perspective(1px) translateZ(0);
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+    position: relative;
+    -webkit-transition-property: color;
+    transition-property: color;
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+}
+
+.hvr-sweep-to-top:before {
+    content: "";
+    position: absolute;
+    z-index: -1;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: var(--color-celeste);
+    -webkit-transform: scaleY(0);
+    transform: scaleY(0);
+    -webkit-transform-origin: 50% 100%;
+    transform-origin: 50% 100%;
+    -webkit-transition-property: transform;
+    transition-property: transform;
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+    -webkit-transition-timing-function: ease-out;
+    transition-timing-function: ease-out;
+}
+
+.hvr-sweep-to-top:hover, 
+.hvr-sweep-to-top:focus, 
+.hvr-sweep-to-top:active {
+    color: white;
+}
+  
+.hvr-sweep-to-top:hover:before, 
+.hvr-sweep-to-top:focus:before, 
+.hvr-sweep-to-top:active:before {
+    -webkit-transform: scaleY(1);
+    transform: scaleY(1);
+}
+
+/* botones */
+.btn {
+    width: auto;
+    height: 3.5rem;
+    color: var(--color-primario-blanco);
+    font-weight: 700;
+    font-size: 1.5rem;
+    background-color: var(--color-verde-alternativo);
+    border-radius: 5px;
+    vertical-align: middle;
+    -webkit-transform: perspective(1px) translateZ(0);
+    transform: perspective(1px) translateZ(0);
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+    position: relative;
+}
+
+.btn:before {
+    content: '';
+    position: absolute;
+    border: var(--color-celeste) solid 4px;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+    -webkit-transition-property: top, right, bottom, left;
+    transition-property: top, right, bottom, left;
+}
+
+.btn:hover:before,
+.btn:focus:before, 
+.btn:active:before {
+    top: -8px;
+    right: -8px;
+    bottom: -8px;
+    left: -8px;
+}
+
+.btn--banner{ 
+    margin: 0 0 0 12rem;
+}
 
